# SDL2Tutorial

./: CMakeLists.txt  install.sh  main.cpp  readme.md
[Lesson 27]/: main.cpp
etc/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  readme.md
src/: CMakeLists.txt
tests/: main.cpp  readme.md
